# RPG

./: .appveyor.yml  .clang-format  .clang-tidy  .cmake-format.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md  config
cmake/: Cache.cmake  CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  Config.cpp  Config.h  Events.cpp  Game.cpp  Game.h  ResourceManager.cpp  Scene.h  Window.cpp  Window.h  main.cpp
src/core/: Config.cpp  Events.h
src/ecs/: ComponentArray.h  ComponentManager.h  ECS.cpp  ECS.h  EntityManager.h  SystemManager.h
src/renderer/: ResourceManager.h  Window.cpp  Window.h
src/scenes/: Game.cpp  Scene.h
tests/: CMakeLists.txt  tests.cpp
